fix: correct answer float position on small screens

--- a/app/src/components/QuestionCard/QuestionCard.css
+++ b/app/src/components/QuestionCard/QuestionCard.css
@@ -2,4 +2,11 @@
   background: rgba(0, 0, 0, 0.8);
   display: grid;
   place-items: center;
+  padding-top: 45vh;
+}
+
+@media (min-width: 769px) {
+  .Dialog-overlay {
+    padding-top: 10vh;
+  }
 }
